--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.344.0",
     "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
